--- a/config/config.json
+++ b/config/config.json
@@ -19,6 +19,6 @@
     "operatorsAliases": false
   },
   "production": {
-    "use_env_variable": "JAWSDB_URL",
+    "use_env_variable": "JAWSDB_URL"
   }
 }
